[tool.poetry]
name = "ojd_daps_skills"
version = "0.0.0"
description = ""
authors = ["Nesta"]
packages = [{ include = "ojd_daps_skills" }]

[tool.poetry.dependencies]
# This version must also be changed in the ruff config.
python = "^3.9,<3.12"
numpy = "1.24.4"
scipy = "^1.11.3"
pandas = "^2.1.0"
tqdm = "^4.66.1"
filelock = "3.7.1"
typer = "0.4.1"
sh = "1.14.2"
transformers = "4.33.3"
sentence-transformers = "2.2.2"
scikit-learn = "1.3.1"
spacy = "3.4.0"
nervaluate = "0.1.8"
s3fs = "2022.5.0"
boto3 = "1.21.21"
toolz = "0.12.0"
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
jupytext = "^1.15.2"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
flake8-import-order = "^0.18.2"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.9.16"
black = "^23.10.1"
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^1.3.0"
pre-commit = "^3.5.0"
pre-commit-hooks = "^4.5.0"
spacy = "3.4.0"
pytest = "^7.4.3"
sqlalchemy = "1.4.37"
pymysql = "1.0.2"
myst-parser = "^2.0.0"
typing-extensions = "<4.6.0"
setuptools-scm = "^8.0.4"
build = "^1.0.3"

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
